# GRLDrugProp

./: .env  .gitignore  .pre-commit-config.yaml  Data_exploration.ipynb  README.md  __main__.py  eda_rescal.ipynb  environment.yml  pyproject.toml  requirements.txt  requirements_hpc.txt  requirements_hpc_base.txt  requirements_hpc_no_plain_torch_modules.txt  requirements_hpc_torch.txt  scrapbook.py  setup.py
data/embeddings/: rescal_100.csv  rescal_100.pickle
data/features/cell_line_features/: CCLE_954_gene_express_pca.json  ncbi_ids.csv
data/features/drug_features/: drug_E3FP_fp_3D.csv  drug_ECFP_fp_2D.csv  drug_ECFP_fp_2D_83.csv  drug_ECFP_fp_2D_83_rad3.csv  drug_MACCS_fp_2D_.csv  drug_MINHASH_fp_2D.csv  drug_MINHASH_fp_2D_83.csv  drug_MINHASH_fp_2D_83_rad3.csv  drug_rdkit_descriptor_2D.csv
data/features/pretrained_features/: drug_embedding_deepdds_f0_d83.json  drug_embedding_deepdds_f1_d83.json  drug_embedding_deepdds_f2_d83.json  drug_embedding_deepdds_f3_d83.json  drug_embedding_deepdds_f4_d83.json  drug_embedding_distmult_f0_d83.json  drug_embedding_distmult_f1_d83.json  drug_embedding_distmult_f2_d83.json  drug_embedding_distmult_f3_d83.json  drug_embedding_distmult_f4_d83.json
environment_config/: update_chemicalx.py  update_chemicalx.sh
environment_config_hpc/: constants.py  update_chemicalx.sh
graph_package/: __init__.py
graph_package/configs/: definitions.py  directories.py
graph_package/configs/hydra_configs/: config.yaml
graph_package/configs/hydra_configs/layer/: dummy.yaml  gac.yaml  gat.yaml  gat_pr_rel.yaml  gc.yaml  rgac.yaml  rgat.yaml  rgc.yaml
graph_package/configs/hydra_configs/model/: deepdds.yaml  deepdds_hpc.yaml  distmult.yaml  gaecds.yaml  (+4 more)
graph_package/scratch/: csv_to_tsv.py  scratch2.py  scratch_2.py
graph_package/src/: ONEIL.py  datasets.py  main.py  main_utils.py
graph_package/src/data_processeing /: bronze_to_silver.py  silver_to_gold.py
graph_package/src/data_processing/: bronze_to_silver.py  eta.ipynb  silver_to_gold.py
graph_package/src/error_analysis/: main.py  run_err_analysis.py  utils.py
graph_package/src/etl/: bronze.py  dataloader_torchdrug_deepdds.py  dataloaders.py  datasets.py  gold.py  pipeline_test.py  run.py  silver.py
graph_package/src/explainability/: old_utils.py  pca.py  run_explainability.py  utils.py
graph_package/src/model/: RESCAL.py  RESCALSynergy.py  __init__.py
graph_package/src/models/: __init__.py  complex.py  deepdds.py  distmult.py  gaecds.py  gcn.py  hybridmodel.py  rescal.py  rgcn.py  rotate.py  tasks.py  transe.py
graph_package/src/node_features/: pca.py  run.py  utils.py
graph_package/src/pl_modules/: __init__.py  base_pl.py  callbacks.py  deepdds_pl.py  gaecds_pl.py  knowledge_graph_completion.py  loss_functions.py  metrics.py  rescal_pl.py  synergy_prediction.py
graph_package/src/rescal_als/: rescal_als_main.py
graph_package/src/tasks/: __init__.py  synergy_prediction.py
graph_package/utils/: helpers.py  meter.py
notebooks/: Data_exploration.ipynb  Data_exploration_zip.ipynb  Data_exploration_zip_new.ipynb  drug_fingerprint_eda.ipynb
tests/: test_tests.py
(+51 files in other folders)
