# pyproject.toml

[tool.poetry]
name = "poetry_Graph_Representation_Learning_For_Modelling_Drug_Properties"
version = "0.1.0"
description = "Python Boilerplate contains all the boilerplate you need to create a Python package."
authors = ["Mads C. B. Andersen, Villads T. Stokbroe, Johannes B. Reiche"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
ruff = "^0.0.263"
pydantic = "^1.10.7"
pandas = "^2.0.1"
pre-commit = "^3.2.2"
pytest = "^7.3.1"
seaborn = "^0.12.2"
colorlog = "^6.7.0"
AutoUpdate = "^0.0.4"
requests = "^2.29.0"
torch = "^2.0.1"
torch-geometric = "^2.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"


[tool.ruff] #"ruff linter" to get compatible linters
#Pycodestyle: python style guide checker ('E'),
#Pydocstyle: python docstring compliance ('D'),
#Pyflakes:  checks Python source files for errors. ('F')
#isort: sorts imports according to guidelines. ('I')
#black: autoformatter is currently being implemented in ruff: https://github.com/charliermarsh/ruff/issues/1904. Replace when possible.
select = ["E", 'D', "F", "I"]
ignore = [ "D401" ] #Add which rules to ignore ex. add "E701" to list.

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.pydocstyle]
# Use pep257-style docstrings.
convention = "pep257"


[tool.ruff.isort] #https://beta.ruff.rs/docs/settings/#isort for settings on isort
force-single-line = true

[tool.black]
skip-string-normalization = true
line-length = 88
target-version = ['py36', 'py37', 'py38','py39']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | (.*)/migrations
    | dist
    | Graph_Representation_Learning_For_Modelling_Drug_Properties
    | graph_package
  )/
)
'''